2002-12-19  Chris Lyttle  <chris@wilddev.net>

	* xmldocs.make: make clean *html, uninstall help-search-index.db,
	  fix typo's, remove gnucash help dir on uninstall
	* doc-tools/build-help-index.in: add 'use bytes' so it works on rh8
	* guide/C/gnucash-guide-C.omf: remove 'Office' class
	* help/C/gnucash-help-C.omf: remove 'Office' class

2002-12-15  Chris Lyttle  <chris@wilddev.net>

	* configure.in: release 1.7.6
	* NEWS: add release notes
	* README: update
	* AUTHORS: added Linas
	
2002-12-15  Chris Lyttle  <chris@wilddev.net>

	* xmldocs.make: patch from hampton to fix distcheck
	* doc-tools/Makefile.am: patch from hampton to fix distcheck

2002-12-12  Chris Lyttle  <chris@wilddev.net>

	* acconfig.h: added to repository
	* doc-tools: copy from main gnucash module
	* Makefile.am: add doc-tools to subdir
	* configure.in: add perl check, berkeley-db check, doc-tools makefile
	* doc-tools/Makefile.am: add routines to make and install search-db
	* doc-tools/dbadd.c: added to repository
	* doc-tools/build-help-index.in: cleaned up html file stripping, use
	  perl module File::Basename to make relative path to html dirs
	* gnucash-docs.spec.in: added omf stuff
	
2002-12-09  Chris Lyttle  <chris@wilddev.net>

	* Makefile.am: add guide to subdirs
	* configure.in: add guide dir to makefiles
	* guide/C/gnucash-guide-C.omf: remove extra name from holders

2002-12-09  Chris Lyttle  <chris@wilddev.net>

	* HACKING: added docs hacking guidelines
	* Makefile.am: remove chunk.xsl, add xsl and styleshhet to EXTRA_DIST
	* NEWS: add version history
	* README: add requirements
	* xmldocs.make: changed to use xsl dir stylesheets, generate filenames
	  from id tags, only generate html on install, move html to a subdir
	  of docs dir to prevent filename clashes, copy in stylesheet png's
	* stylesheet: copy from install with  png's needed for stylesheets
	* xsl: copy from gnome-docu/gdp better stylesheets
	* guide/Makefile.am: added to repository