@@ -1,3 +1,8 @@
+2002-12-20  Chris Lyttle  <chris@wilddev.net>
+
+	* gnucash-docs.spec.in: fix for omf files not installing
+	* omf.make: fix for omf files not installing
+
 2002-12-19  Chris Lyttle  <chris@wilddev.net>
 
 	* xmldocs.make: make clean *html, uninstall help-search-index.db,
